--- a/development/slim/index.slim
+++ b/development/slim/index.slim
@@ -7,4 +7,10 @@ html
     link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic,700,800,800italic,300italic,300' rel='stylesheet' type='text/css'
     link href="css/application.css" rel="stylesheet"
   body
-   | Hello world
+    .container 
+      p Hello world
+      
+    
+    script src="js/app.js"  
+  
+    
