new branch table-slider

--- a/development/sass/vars.sass
+++ b/development/sass/vars.sass
@@ -3,9 +3,10 @@
 $osans: 'Open Sans', sans-serif;
 $gotham: "Gotham Pro", sans-serif
 $icons: 'FontAwesome'
+$arial: 'Arial', sans-serif;
 // colors
 
-$black: #000000
+$Black: #000000
 $white: #ffffff
 
 $dblack: #393939
@@ -18,7 +19,7 @@ $green: #40ae55
 $green-h: #4dce65
 
 
-$m-font: $osans
+$m-font: $arial
 
 $main-color: $dblack
 $accent: #00a8e3
