--- a/production/css/application.css
+++ b/production/css/application.css
@@ -1,81 +1,100 @@
-/*! normalize.css v4.0.0 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
- * 2. Prevent adjustments of font size after orientation changes in IE and iOS.
+ * 2. Correct the line height in all browsers.
+ * 3. Prevent adjustments of font size after orientation changes in
+ *    IE on Windows Phone and in iOS.
  */
+/* Document
+   ========================================================================== */
 html {
   font-family: sans-serif;
   /* 1 */
-  -ms-text-size-adjust: 100%;
+  line-height: 1.15;
   /* 2 */
+  -ms-text-size-adjust: 100%;
+  /* 3 */
   -webkit-text-size-adjust: 100%;
-  /* 2 */ }
+  /* 3 */ }
 
+/* Sections
+   ========================================================================== */
 /**
  * Remove the margin in all browsers (opinionated).
  */
 body {
   margin: 0; }
 
-/* HTML5 display definitions
-========================================================================== */
 /**
  * Add the correct display in IE 9-.
- * 1. Add the correct display in Edge, IE, and Firefox.
- * 2. Add the correct display in IE.
  */
 article,
 aside,
-details,
-figcaption,
-figure,
 footer,
 header,
-main,
-menu,
 nav,
-section,
-summary {
+section {
+  display: block; }
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in IE.
+ */
+figcaption,
+figure,
+main {
   /* 1 */
   display: block; }
 
 /**
- * Add the correct display in IE 9-.
+ * Add the correct margin in IE 8.
  */
-audio,
-canvas,
-progress,
-video {
-  display: inline-block; }
+figure {
+  margin: 1em 40px; }
 
 /**
- * Add the correct display in iOS 4-7.
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
  */
-audio:not([controls]) {
-  display: none;
-  height: 0; }
+hr {
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */ }
 
 /**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
  */
-progress {
-  vertical-align: baseline; }
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
 
+/* Text-level semantics
+   ========================================================================== */
 /**
- * Add the correct display in IE 10-.
- * 1. Add the correct display in IE.
- */
-template,
-[hidden] {
-  display: none; }
-
-/* Links
-========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
+ * 1. Remove the gray background on active links in IE 10.
+ * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
  */
 a {
-  background-color: transparent; }
+  background-color: transparent;
+  /* 1 */
+  -webkit-text-decoration-skip: objects;
+  /* 2 */ }
 
 /**
  * Remove the outline on focused links when they are also active or hovered
@@ -85,8 +104,6 @@ a:active,
 a:hover {
   outline-width: 0; }
 
-/* Text-level semantics
-========================================================================== */
 /**
  * 1. Remove the bottom border in Firefox 39-.
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
@@ -114,18 +131,22 @@ strong {
   font-weight: bolder; }
 
 /**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
+
+/**
  * Add the correct font style in Android 4.3-.
  */
 dfn {
   font-style: italic; }
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0; }
 
 /**
  * Add the correct background and color in IE 9-.
@@ -158,7 +179,21 @@ sup {
   top: -0.5em; }
 
 /* Embedded content
-========================================================================== */
+   ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ */
+audio,
+video {
+  display: inline-block; }
+
+/**
+ * Add the correct display in iOS 4-7.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
 /**
  * Remove the border on images inside links in IE 10-.
  */
@@ -171,81 +206,38 @@ img {
 svg:not(:root) {
   overflow: hidden; }
 
-/* Grouping content
-========================================================================== */
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */ }
-
-/**
- * Add the correct margin in IE 8.
- */
-figure {
-  margin: 1em 40px; }
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */ }
-
 /* Forms
-========================================================================== */
+   ========================================================================== */
 /**
- * Change font properties to `inherit` in all browsers (opinionated).
+ * 1. Change the font styles in all browsers (opinionated).
+ * 2. Remove the margin in Firefox and Safari.
  */
 button,
 input,
+optgroup,
 select,
 textarea {
-  font: inherit; }
-
-/**
- * Restore the font weight unset by the previous rule.
- */
-optgroup {
-  font-weight: bold; }
+  font-family: sans-serif;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */ }
 
 /**
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
- * 2. Show the overflow in Edge, Firefox, and IE.
  */
 button,
-input,
-select {
-  /* 2 */
+input {
+  /* 1 */
   overflow: visible; }
 
 /**
- * Remove the margin in Safari.
- * 1. Remove the margin in Firefox and Safari.
- */
-button,
-input,
-select,
-textarea {
-  /* 1 */
-  margin: 0; }
-
-/**
- * Remove the inheritence of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritence of text transform in Firefox.
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
  */
 button,
 select {
@@ -253,24 +245,9 @@ select {
   text-transform: none; }
 
 /**
- * Change the cursor in all browsers (opinionated).
- */
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  cursor: pointer; }
-
-/**
- * Restore the default cursor to disabled elements unset by the previous rule.
- */
-[disabled] {
-  cursor: default; }
-
-/**
  * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
  *    controls in Android 4.
- * 2. Correct the inability to style clickable types in iOS.
+ * 2. Correct the inability to style clickable types in iOS and Safari.
  */
 button,
 html [type="button"],
@@ -283,15 +260,19 @@ html [type="button"],
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
   padding: 0; }
 
 /**
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-input:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText; }
 
 /**
@@ -323,6 +304,16 @@ legend {
   /* 1 */ }
 
 /**
+ * 1. Add the correct display in IE 9-.
+ * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */ }
+
+/**
  * Remove the default vertical scrollbar in IE.
  */
 textarea {
@@ -347,26 +338,76 @@ textarea {
   height: auto; }
 
 /**
- * Correct the odd appearance of search inputs in Chrome and Safari.
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
  */
 [type="search"] {
-  -webkit-appearance: textfield; }
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */ }
 
 /**
- * Remove the inner padding and cancel buttons in Chrome on OS X and
- * Safari on OS X.
+ * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
  */
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none; }
 
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */ }
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in Edge, IE, and Firefox.
+ */
+details,
+menu {
+  display: block; }
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item; }
+
+/* Scripting
+   ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ */
+canvas {
+  display: inline-block; }
+
+/**
+ * Add the correct display in IE.
+ */
+template {
+  display: none; }
+
+/* Hidden
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10-.
+ */
+[hidden] {
+  display: none; }
+
 html, body {
   font-size: 13px;
   line-height: 1.4em;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Arial", sans-serif;
   font-weight: 400;
-  color: #393939;
-  height: 100%; }
+  color: #393939; }
 
 *, *:before, *:after {
   box-sizing: border-box;
@@ -382,13 +423,6 @@ ul, li {
   margin: 0;
   padding: 0;
   list-style: none; }
-
-.container {
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 1280px;
-  min-width: 980px;
-  width: 100%; }
 
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
@@ -532,7 +566,7 @@ ul, li {
   -ms-transform: scale(1, -1);
   transform: scale(1, -1); }
 
-\:root .fa-rotate-90, \:root .fa-rotate-180, \:root .fa-rotate-270, \:root .fa-flip-horizontal, \:root .fa-flip-vertical {
+:root .fa-rotate-90, :root .fa-rotate-180, :root .fa-rotate-270, :root .fa-flip-horizontal, :root .fa-flip-vertical {
   filter: none; }
 
 .fa-stack {
@@ -2480,194 +2514,48 @@ ul, li {
   overflow: visible;
   clip: auto; }
 
-.header {
-  background-color: #86c02f;
-  background-image: -webkit-linear-gradient(top, #86c02f 0%, #88ce53 100%);
-  background-image: linear-gradient(to bottom,#86c02f 0%, #88ce53 100%);
-  min-height: 40px;
-  border-top: 1px solid #6eb21a;
-  border-bottom: 2px solid #adfe00; }
+main {
+  padding-top: 80px;
+  font-size: 16px;
+  line-height: 1.4; }
 
-.header__container {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
+.table-main-wrapper {
+  overflow: auto;
+  display: none; }
+
+.table-wrapper .table {
+  width: 100%; }
+  .table-wrapper .table tr td {
+    padding: 8px;
+    border-bottom: 1px solid #000000;
+    border-top: none; }
+    .table-wrapper .table tr td:first-child {
+      background: #f0f0f0;
+      width: 23.2%; }
+  .table-wrapper .table tr:first-child {
+    border-bottom: 2px solid #000000; }
+
+.table-slider {
   display: flex; }
-
-.menu {
-  margin: auto;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex; }
-
-.menu-item__link {
-  text-decoration: none;
-  color: #ffffff;
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 600;
-  display: inline-block;
-  padding: 12px 25px 12px 45px;
-  border-right: 2px solid #8fd43e;
-  position: relative; }
-  .menu-item__link:hover {
-    background: rgba(0, 0, 0, 0.1);
-    -webkit-transition: background 0.3s;
-    -moz-transition: background 0.3s;
-    transition: background 0.3s; }
-
-.menu-item:last-child .menu-item__link {
-  border-right: none; }
-
-.menu-item__link--home:before {
-  font-family: "FontAwesome";
-  content: "\f015";
-  font-size: 16px;
-  position: absolute;
-  left: 15px;
-  top: 11px; }
-
-.menu-item__link--about-us:before {
-  font-family: "FontAwesome";
-  content: "\f0c0";
-  font-size: 16px;
-  position: absolute;
-  left: 15px;
-  top: 12px; }
-
-.menu-item__link--news:before {
-  font-family: "FontAwesome";
-  content: "\f1ea";
-  font-size: 16px;
-  position: absolute;
-  left: 15px;
-  top: 12px; }
-
-.menu-item__link--services:before {
-  font-family: "FontAwesome";
-  content: "\f015";
-  font-size: 16px;
-  position: absolute;
-  left: 15px;
-  top: 11px; }
-
-.menu-item__link--contacts:before {
-  font-family: "FontAwesome";
-  content: "\f0e0";
-  font-size: 16px;
-  position: absolute;
-  left: 15px;
-  top: 11px; }
-
-.banner {
-  height: 500px;
-  background: url("../images/canvas-1.jpg") 50% 50% no-repeat;
-  background-size: cover;
-  margin-bottom: 30px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); }
-
-.content {
-  margin-bottom: 30px; }
-
-.content__container {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-justify-content: space-between;
-  -ms-justify-content: space-between;
-  -o-justify-content: space-between;
-  justify-content: space-between;
-  -ms-flex-pack: justify; }
-
-.content__main {
-  max-width: 820px;
-  width: 100%;
-  margin: 0 30px;
-  padding: 0px 12px; }
-  .content__main p {
-    margin-right: 15px 0; }
-
-.content__main-caption {
-  font-size: 25px;
-  font-weight: 800; }
-
-.sidebar {
-  width: 200px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-  padding: 15px 12px 0;
-  -webkit-flex-shrink: 0;
-  -moz-flex-shrink: 0;
-  flex-shrink: 0;
-  -ms-flex-negative: 0; }
-
-.sidebar__caption {
-  font-size: 17px;
-  font-weight: 700; }
-
-.sidebar__content p {
-  margin: 15px 0; }
-
-.footer {
-  background-color: #696b8e;
-  background-image: -webkit-linear-gradient(top, #696b8e 0%, #424b66 100%);
-  background-image: linear-gradient(to bottom,#696b8e 0%, #424b66 100%);
-  color: #ffffff;
-  overflow: hidden;
-  padding: 25px 10px;
-  height: 230px;
-  margin-top: -230px; }
-
-.footer__container {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-justify-content: space-between;
-  -ms-justify-content: space-between;
-  -o-justify-content: space-between;
-  justify-content: space-between;
-  -ms-flex-pack: justify; }
-
-.footer__item {
-  max-width: 406px;
-  width: 100%;
-  margin: 0 15px; }
-  .footer__item p {
-    margin: 0 10px; }
-
-.footer__item--center {
-  text-align: center; }
-
-.footer__item--center-right {
-  text-align: right; }
-
-.wrapper {
-  min-height: 100%;
-  padding-bottom: 230px; }
-
-@media only screen and (max-width: 1280px) {
-  .footer__container {
-    padding-left: 15px;
-    padding-right: 15px; } }
+  .table-slider .table-slider_fixed-column {
+    width: 23%; }
+    .table-slider .table-slider_fixed-column table {
+      width: 100%;
+      table-layout: fixed;
+      overflow: hidden; }
+      .table-slider .table-slider_fixed-column table tr td {
+        padding: 8px;
+        border-bottom: 1px solid #000000;
+        border-top: none; }
+        .table-slider .table-slider_fixed-column table tr td:first-child {
+          background: #f0f0f0; }
+  .table-slider .table-slider_content {
+    width: 77%;
+    overflow: hidden; }
+    .table-slider .table-slider_content table {
+      width: 100%;
+      transition: margin-left 0.25s ease-in-out; }
+      .table-slider .table-slider_content table tr td {
+        padding: 8px;
+        border-bottom: 1px solid #000000;
+        border-top: none; }
