--- a/development/sass/defaults.sass
+++ b/development/sass/defaults.sass
@@ -1,6 +1,6 @@
 html, body
-  font-size: 13px
-  line-height: 1.4em
+  font-size: 14px
+  line-height: 1.4
   font-family: $m-font
   font-weight: 400
   color: $main-color
