--- a/development/sass/vars.sass
+++ b/development/sass/vars.sass
@@ -1,25 +1,36 @@
 // fonts
 
-$osans: 'Open Sans', sans-serif;
+$osans: 'Open Sans', sans-serif
 $gotham: "Gotham Pro", sans-serif
 $icons: 'FontAwesome'
-$arial: 'Arial', sans-serif;
+$arial: 'Arial', sans-serif
+
+$fontTeaserCaption: FSMePro-bold
+$fontGenesisHeadLight: GenesisSansHead-Light
+$fontGenesisTextBold: GenesisSansText-Bold
+$fontGenesisTextBoldItalic: GenesisSansText-BoldItalic
+$fontGenesisTextItalic: GenesisSansText-Italic
+$fontGenesisTextMedium: GenesisSansText-Medium
+$fontGenesisTextMediumItalic: GenesisSansText-MediumItalic
+$fontGenesisTextRegular: GenesisSansText-Regular
+$fontHyundaiHeadBold: HyundaiSansHead-Bold
+$fontHyundaiHeadLight: HyundaiSansHead-Light
+$fontHyundaiHeadMedium: HyundaiSansHead-Medium
+$fontHyundaiHeadRegular: HyundaiSansHead-Regular
+$fontHyundaiTextBold: HyundaiSansText-Bold
+$fontHyundaiTextBoldItalic: HyundaiSansText-BoldItalic
+$fontHyundaiTextItalic: HyundaiSansText-Italic
+$fontHyundaiTextMedium: HyundaiSansText-Medium
+$fontHyundaiTextMediumItalic: HyundaiSansText-MediumItalic
+$fontHyundaiTextRegular: HyundaiSansText-Regular
 // colors
 
 $Black: #000000
-$white: #ffffff
+$White: #ffffff
+$Gray1: #f0f0f0;
 
-$dblack: #393939
-
-$gold: #a4915f
-
-$gold-text: #68601c
-
-$green: #40ae55
-$green-h: #4dce65
-
-
-$m-font: $arial
-
-$main-color: $dblack
+$main-color: $Black
 $accent: #00a8e3
+
+
+$m-font: $fontHyundaiTextRegular
