--- a/development/sass/application.sass
+++ b/development/sass/application.sass
@@ -1,11 +1,13 @@
 ﻿@import "normalize"
 @import "bourbon"
-
+@import "mixins/mq"
 @import "vars"
 @import "defaults"
 @import "fonts"
 @import "fontawesome"
 
 @import "bem/main"
+
+
 
 // @import "responsive"
