--- a/development/sass/vars.sass
+++ b/development/sass/vars.sass
@@ -28,7 +28,7 @@ $fontHyundaiTextRegular: HyundaiSansText-Regular
 $Black: #000000
 $White: #ffffff
 $Gray1: #f0f0f0;
-
+$Blue: #002c5f;
 $main-color: $Black
 $accent: #00a8e3
 
