--- a/production/css/application.css
+++ b/production/css/application.css
@@ -2637,6 +2637,58 @@ main {
   overflow: auto;
   display: none; }
 
+.table-controls-wrapper {
+  display: flex;
+  justify-content: flex-end; }
+  @media (max-width: 768px) {
+    .table-controls-wrapper {
+      justify-content: center; } }
+  .table-controls-wrapper .table-controls {
+    display: flex;
+    align-items: center; }
+    .table-controls-wrapper .table-controls .table-previous,
+    .table-controls-wrapper .table-controls .table-next {
+      position: relative;
+      font-size: 0;
+      width: 20px;
+      height: 20px;
+      text-decoration: none;
+      display: block; }
+      .table-controls-wrapper .table-controls .table-previous:before,
+      .table-controls-wrapper .table-controls .table-next:before {
+        padding-top: 1px;
+        font-family: HyundaiSansHead-Regular;
+        content: '\2039';
+        color: #002c5f;
+        font-size: 32px;
+        font-weight: bold;
+        position: absolute;
+        left: 0;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        transform: translateY(-50%); }
+    .table-controls-wrapper .table-controls .table-next:before {
+      content: '\203A';
+      left: auto;
+      right: 0; }
+  .table-controls-wrapper .pagination {
+    font-family: HyundaiSansText-Regular;
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 1.4;
+    min-width: 30px;
+    text-align: center; }
+    .table-controls-wrapper .pagination .pagination-current,
+    .table-controls-wrapper .pagination .pagination-total {
+      text-decoration: none;
+      color: #000000;
+      font-family: HyundaiSansText-Regular;
+      font-size: 16px;
+      font-weight: normal;
+      line-height: 1; }
+
 .table-wrapper .table {
   width: 100%; }
   .table-wrapper .table tr td {
@@ -2662,6 +2714,9 @@ main {
       font-weight: normal; }
   .table-slider .table-slider_fixed-column {
     width: 23%; }
+    @media (max-width: 768px) {
+      .table-slider .table-slider_fixed-column {
+        width: 50%; } }
     .table-slider .table-slider_fixed-column table {
       width: 100%;
       table-layout: fixed;
@@ -2679,10 +2734,11 @@ main {
         border-bottom: 3px solid #000000; }
   .table-slider .table-slider_content {
     width: 77%;
-    overflow: hidden; }
+    overflow: hidden;
+    position: relative; }
     .table-slider .table-slider_content table {
       width: 100%;
-      transition: margin-left 0.25s ease-in-out; }
+      transition: margin-left 0.6s ease; }
       .table-slider .table-slider_content table tr td {
         padding: 10px;
         border-bottom: 1px solid #000000;
